--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,25 @@ body{
     display: flex;
     flex-direction: column;
 }
+.nav{
+
+    text-align: center;
+    width:100%;
+    height:100px;
+    margin-top:20px; 
+    
+    
+}
+
+#nav{
+    margin:30px;
+   
+   
+    
+}
+.logo{
+    font-size: 25px;
+}
+.color{
+    color:green;
+}
