--- a/styles.css
+++ b/styles.css
@@ -80,3 +80,11 @@ li{
 .nav1{
     margin-top: 40px;
 }
+.nav>ul>li>a{
+    text-decoration: none;
+    color:red;
+    font-size: 30px;
+}
+.nav>ul>li>a:hover{
+    color:white;
+}
