--- a/styles.css
+++ b/styles.css
@@ -112,3 +112,18 @@ mid-section{
     color: blanchedalmond;
     
 }
+.about{
+    text-align: center;
+    font-size: 26px;
+}
+button{
+    padding: 20px;
+    color:white;
+    font-weight: 700;
+    background-color:blue;
+    border-bottom-left-radius: 10%;
+    border-bottom-right-radius: 10%;
+    border-top-left-radius: 10%;
+    border-top-right-radius: 10%;
+   
+}
