adding hover to buttons

--- a/styles.css
+++ b/styles.css
@@ -127,3 +127,12 @@ button{
     border-top-right-radius: 10%;
    
 }
+button:hover{
+    background-color: burlywood;
+}
+#member1>button{
+    margin:5% 0% 0% 30%;
+}
+#member2>button{
+    margin:5% 0% 0% 30%;
+}
