--- a/styles.css
+++ b/styles.css
@@ -148,3 +148,15 @@ button:hover{
 .favoritesongs>h1{
     color:green;
 }
+.favoritesongs{
+    text-align: center;
+   
+}
+.favoritesongs>ul{
+    display:flex;
+    flex-direction:column;
+    justify-content: space-between;
+}
+.favoritesongs>h1{
+    color:green;
+}
