--- a/styles.css
+++ b/styles.css
@@ -169,3 +169,13 @@ button:hover{
     text-decoration: none;
     color:white;
 }
+.footer{
+    background-color: black;
+    width:100%;
+    height:10vh;
+    color:white;
+    text-align: center;
+}
+.footer>p{
+    margin-top: 3%;
+}
